--- a/ivy.xml
+++ b/ivy.xml
@@ -21,6 +21,7 @@
   </publications>
 
   <dependencies>
+	<dependency org="uk.ac.gate" name="gate-core" rev="7.1"/>  
   	<dependency org="org.apache.tika" name="tika-core" rev="1.3" conf="main->default" />
   	<dependency org="org.apache.tika" name="tika-parsers" rev="1.3" conf="main->default" />
   	<dependency org="org.apache.solr" name="solr-core" rev="4.1.0" conf="main->default" />
